[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://sprits/sprits/start.png" type="Texture" id=2]
[ext_resource path="res://sprits/sprits/options.png" type="Texture" id=3]
[ext_resource path="res://sprits/sprits/exit.png" type="Texture" id=4]
[ext_resource path="res://sprits/sprits/cridits.png" type="Texture" id=5]
[ext_resource path="res://sprits/backgrownd.png" type="Texture" id=6]
[ext_resource path="res://sprits/player/idle/adventurer-idle-00.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/02 - BWV 1007 - Prelude.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=9]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 10 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="start" type="TextureButton" parent="."]
margin_left = 91.2993
margin_top = 283.962
margin_right = 697.299
margin_bottom = 395.962
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 2 )

[node name="options" type="TextureButton" parent="."]
margin_left = 91.3182
margin_top = 452.12
margin_right = 697.318
margin_bottom = 547.12
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 3 )

[node name="exit" type="TextureButton" parent="."]
margin_left = 94.8487
margin_top = 746.491
margin_right = 700.849
margin_bottom = 834.491
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 4 )

[node name="cridits" type="TextureButton" parent="."]
margin_left = 88.3262
margin_top = 586.147
margin_right = 694.326
margin_bottom = 695.147
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 960.01, 600.052 )
texture = ExtResource( 6 )

[node name="adventurer-idle-00" type="Sprite" parent="."]
position = Vector2( 1457.92, 555.675 )
scale = Vector2( 29.3132, 26.667 )
texture = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
mix_target = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 1285.0
margin_top = 1039.0
margin_right = 1907.0
margin_bottom = 1181.0
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = 1299.86
margin_top = 1054.33
margin_right = 1888.86
margin_bottom = 1111.33
custom_fonts/font = SubResource( 1 )
text = "copyright Â© 333games
version 0.5"
[connection signal="mouse_entered" from="start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="options" to="." method="_on_options_mouse_exited"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="cridits" to="." method="_on_cridits_mouse_entered"]
[connection signal="mouse_exited" from="cridits" to="." method="_on_cridits_mouse_exited"]
[connection signal="pressed" from="cridits" to="." method="_on_cridits_pressed"]
